tests/error/ev.gw
#! [contains] NullEventWait
Event ref e;
e => now;
